Added option to override the title number when queuing multiple titles. Added an option on the {title} token to specify leading zeroes.

--- a/VidCoder/Properties/Resources.resx
+++ b/VidCoder/Properties/Resources.resx
@@ -294,4 +294,7 @@ Higher values take more bits away from edges and complex areas to improve areas 
   <data name="PixelAspectRatioToolTip" xml:space="preserve">
     <value>Manually specify a Pixel Aspect Ratio.</value>
   </data>
+  <data name="OverrideTitleNumberToolTip" xml:space="preserve">
+    <value>When chosen, this will override the normal title for the purposes of creating the output file name. For example with titles 2, 3 and 4 and an override of 7, they will be labeled as 7, 8 and 9. Can be useful for ripping a disc of a TV series.</value>
+  </data>
 </root>
