--- a/VidCoder/Properties/Resources.resx
+++ b/VidCoder/Properties/Resources.resx
@@ -306,4 +306,9 @@ Higher values take more bits away from edges and complex areas to improve areas 
   <data name="Video_QualityTargetToolTip" xml:space="preserve">
     <value>Set the desired quality factor. The scale used by each video encoder is different.</value>
   </data>
+  <data name="Audio_DrcToolTip" xml:space="preserve">
+    <value>Dynamic Range Compression. Valid values are 0-4.
+
+For source audio that has a wide dynamic range (very loud and very soft sequences), DRC allows you to "compress" the range by making loud sections softer and soft sections louder.</value>
+  </data>
 </root>
