--- a/VidCoder/Properties/Resources.resx
+++ b/VidCoder/Properties/Resources.resx
@@ -311,4 +311,15 @@ Higher values take more bits away from edges and complex areas to improve areas 
 
 For source audio that has a wide dynamic range (very loud and very soft sequences), DRC allows you to "compress" the range by making loud sections softer and soft sections louder.</value>
   </data>
+  <data name="X264PresetToolTip" xml:space="preserve">
+    <value>Change options to trade off compression efficiency against encoding speed. If you specify a preset, the changes it makes will be applied before all other parameters are applied.</value>
+  </data>
+  <data name="X264ProfileToolTip" xml:space="preserve">
+    <value>Limit the profile of the output stream. If you specify a profile, it overrides all other settings, so if you use it, you will be guaranteed a compatible stream.
+
+You should set this if you know your playback device only supports a certain profile.</value>
+  </data>
+  <data name="X264TuneToolTip" xml:space="preserve">
+    <value>Tune options to further optimize them for your input content. If you specify a tuning, the changes will be applied after the Preset but before all other parameters.</value>
+  </data>
 </root>
