--- a/VidCoder/LocalResources/EncodingRes.resx
+++ b/VidCoder/LocalResources/EncodingRes.resx
@@ -411,139 +411,420 @@ You should set this if you know your playback device only supports a certain pro
   <data name="ShortFramerateLabel" xml:space="preserve">
     <value>Framerate:</value>
   </data>
-  <data name="CodecLabel">
-    <value xml:space="preserve">Video Codec:</value>
+  <data name="CodecLabel" xml:space="preserve">
+    <value>Video Codec:</value>
   </data>
-  <data name="FramerateLabel">
-    <value xml:space="preserve">Framerate (FPS):</value>
+  <data name="FramerateLabel" xml:space="preserve">
+    <value>Framerate (FPS):</value>
   </data>
-  <data name="ConstantFramerateRadioButton">
-    <value xml:space="preserve">Constant Framerate</value>
+  <data name="ConstantFramerateRadioButton" xml:space="preserve">
+    <value>Constant Framerate</value>
   </data>
-  <data name="Quality">
-    <value xml:space="preserve">Quality</value>
+  <data name="Quality" xml:space="preserve">
+    <value>Quality</value>
   </data>
-  <data name="TwoPassEncodingCheckBox">
-    <value xml:space="preserve">2-pass Encoding</value>
+  <data name="TwoPassEncodingCheckBox" xml:space="preserve">
+    <value>2-pass Encoding</value>
   </data>
-  <data name="TurboFirstPassCheckBox">
-    <value xml:space="preserve">Turbo first Pass</value>
+  <data name="TurboFirstPassCheckBox" xml:space="preserve">
+    <value>Turbo first Pass</value>
   </data>
-  <data name="TargetSizeRadioButton">
-    <value xml:space="preserve">Target Size (MB)</value>
+  <data name="TargetSizeRadioButton" xml:space="preserve">
+    <value>Target Size (MB)</value>
   </data>
-  <data name="AverageBitrateRadioButton">
-    <value xml:space="preserve">Avg Bitrate (kbps)</value>
+  <data name="AverageBitrateRadioButton" xml:space="preserve">
+    <value>Avg Bitrate (kbps)</value>
   </data>
-  <data name="ConstantQualityRadioButton">
-    <value xml:space="preserve">Constant Quality</value>
+  <data name="ConstantQualityRadioButton" xml:space="preserve">
+    <value>Constant Quality</value>
   </data>
-  <data name="X264BasicSettings">
-    <value xml:space="preserve">x264 Basic Settings</value>
+  <data name="X264BasicSettings" xml:space="preserve">
+    <value>x264 Basic Settings</value>
   </data>
-  <data name="ProfileLabel">
-    <value xml:space="preserve">Profile:</value>
+  <data name="ProfileLabel" xml:space="preserve">
+    <value>Profile:</value>
   </data>
-  <data name="PresetLabel">
-    <value xml:space="preserve">Preset:</value>
+  <data name="PresetLabel" xml:space="preserve">
+    <value>Preset:</value>
   </data>
-  <data name="TuneLabel">
-    <value xml:space="preserve">Tune:</value>
+  <data name="TuneLabel" xml:space="preserve">
+    <value>Tune:</value>
   </data>
-  <data name="NoneX264Choice">
-    <value xml:space="preserve">-None-</value>
+  <data name="NoneX264Choice" xml:space="preserve">
+    <value>-None-</value>
   </data>
-  <data name="Profile_Baseline">
-    <value xml:space="preserve">Baseline</value>
+  <data name="Profile_Baseline" xml:space="preserve">
+    <value>Baseline</value>
   </data>
-  <data name="Profile_Main">
-    <value xml:space="preserve">Main</value>
+  <data name="Profile_Main" xml:space="preserve">
+    <value>Main</value>
   </data>
-  <data name="Profile_High">
-    <value xml:space="preserve">High</value>
+  <data name="Profile_High" xml:space="preserve">
+    <value>High</value>
   </data>
-  <data name="Preset_UltraFast">
-    <value xml:space="preserve">Ultra Fast</value>
+  <data name="Preset_UltraFast" xml:space="preserve">
+    <value>Ultra Fast</value>
   </data>
-  <data name="Preset_SuperFast">
-    <value xml:space="preserve">Super Fast</value>
+  <data name="Preset_SuperFast" xml:space="preserve">
+    <value>Super Fast</value>
   </data>
-  <data name="Preset_VeryFast">
-    <value xml:space="preserve">Very Fast</value>
+  <data name="Preset_VeryFast" xml:space="preserve">
+    <value>Very Fast</value>
   </data>
-  <data name="Preset_Faster">
-    <value xml:space="preserve">Faster</value>
+  <data name="Preset_Faster" xml:space="preserve">
+    <value>Faster</value>
   </data>
-  <data name="Preset_Fast">
-    <value xml:space="preserve">Fast</value>
+  <data name="Preset_Fast" xml:space="preserve">
+    <value>Fast</value>
   </data>
-  <data name="Preset_Medium">
-    <value xml:space="preserve">Medium</value>
+  <data name="Preset_Medium" xml:space="preserve">
+    <value>Medium</value>
   </data>
-  <data name="Preset_Slow">
-    <value xml:space="preserve">Slow</value>
+  <data name="Preset_Slow" xml:space="preserve">
+    <value>Slow</value>
   </data>
-  <data name="Preset_Slower">
-    <value xml:space="preserve">Slower</value>
+  <data name="Preset_Slower" xml:space="preserve">
+    <value>Slower</value>
   </data>
-  <data name="Preset_VerySlow">
-    <value xml:space="preserve">Very Slow</value>
+  <data name="Preset_VerySlow" xml:space="preserve">
+    <value>Very Slow</value>
   </data>
-  <data name="Preset_Placebo">
-    <value xml:space="preserve">Placebo</value>
+  <data name="Preset_Placebo" xml:space="preserve">
+    <value>Placebo</value>
   </data>
-  <data name="Tune_Film">
-    <value xml:space="preserve">Film</value>
+  <data name="Tune_Film" xml:space="preserve">
+    <value>Film</value>
   </data>
-  <data name="Tune_Animation">
-    <value xml:space="preserve">Animation</value>
+  <data name="Tune_Animation" xml:space="preserve">
+    <value>Animation</value>
   </data>
-  <data name="Tune_Grain">
-    <value xml:space="preserve">Grain</value>
+  <data name="Tune_Grain" xml:space="preserve">
+    <value>Grain</value>
   </data>
-  <data name="Tune_StillImage">
-    <value xml:space="preserve">Still Image</value>
+  <data name="Tune_StillImage" xml:space="preserve">
+    <value>Still Image</value>
   </data>
-  <data name="Tune_Psnr">
-    <value xml:space="preserve">PSNR</value>
+  <data name="Tune_Psnr" xml:space="preserve">
+    <value>PSNR</value>
   </data>
-  <data name="Tune_Ssim">
-    <value xml:space="preserve">SSIM</value>
+  <data name="Tune_Ssim" xml:space="preserve">
+    <value>SSIM</value>
   </data>
-  <data name="Tune_FastDecode">
-    <value xml:space="preserve">Fast Decode</value>
+  <data name="Tune_FastDecode" xml:space="preserve">
+    <value>Fast Decode</value>
   </data>
-  <data name="Tune_ZeroLatency">
-    <value xml:space="preserve">Zero Latency</value>
+  <data name="Tune_ZeroLatency" xml:space="preserve">
+    <value>Zero Latency</value>
   </data>
-  <data name="FpsFormat">
-    <value xml:space="preserve">{0:0.###} FPS</value>
+  <data name="FpsFormat" xml:space="preserve">
+    <value>{0:0.###} FPS</value>
   </data>
-  <data name="CfrSameAsSourceToolTip">
-    <value xml:space="preserve">Uses the listed framerate from the source title for a constant framerate.</value>
+  <data name="CfrSameAsSourceToolTip" xml:space="preserve">
+    <value>Uses the listed framerate from the source title for a constant framerate.</value>
   </data>
-  <data name="CfrToolTip">
-    <value xml:space="preserve">Use a constant frame rate.</value>
+  <data name="CfrToolTip" xml:space="preserve">
+    <value>Use a constant frame rate.</value>
   </data>
-  <data name="VfrSameAsSourceToolTip">
-    <value xml:space="preserve">Allow a variable framerate. If the source has a variable frame rate, this setting will preserve it. Note that some players do not support variable frame rates.</value>
+  <data name="VfrSameAsSourceToolTip" xml:space="preserve">
+    <value>Allow a variable framerate. If the source has a variable frame rate, this setting will preserve it. Note that some players do not support variable frame rates.</value>
   </data>
-  <data name="VfrPeakFramerateToolTip">
-    <value xml:space="preserve">Allow a variable framerate and use the specified rate as a peak. If the source has a variable frame rate, this setting will preserve it. Note that some players do not support variable frame rates.</value>
+  <data name="VfrPeakFramerateToolTip" xml:space="preserve">
+    <value>Allow a variable framerate and use the specified rate as a peak. If the source has a variable frame rate, this setting will preserve it. Note that some players do not support variable frame rates.</value>
   </data>
-  <data name="VfrChoice">
-    <value xml:space="preserve">Variable Framerate</value>
+  <data name="VfrChoice" xml:space="preserve">
+    <value>Variable Framerate</value>
   </data>
-  <data name="VfrPeakChoice">
-    <value xml:space="preserve">Peak Framerate (VFR)</value>
+  <data name="VfrPeakChoice" xml:space="preserve">
+    <value>Peak Framerate (VFR)</value>
   </data>
-  <data name="HighQuality">
-    <value xml:space="preserve">High quality</value>
+  <data name="HighQuality" xml:space="preserve">
+    <value>High quality</value>
   </data>
-  <data name="LowQuality">
-    <value xml:space="preserve">Low quality</value>
+  <data name="LowQuality" xml:space="preserve">
+    <value>Low quality</value>
   </data>
-  <data name="SameAsSource">
-    <value xml:space="preserve">Same as source</value>
+  <data name="SameAsSource" xml:space="preserve">
+    <value>Same as source</value>
+  </data>
+  <data name="AddAudioEncodingButton" xml:space="preserve">
+    <value>Add audio encoding</value>
+  </data>
+  <data name="NoTracksPlaceholder" xml:space="preserve">
+    <value>(No tracks)</value>
+  </data>
+  <data name="TargetStream" xml:space="preserve">
+    <value>Target Stream</value>
+  </data>
+  <data name="MixdownLabel" xml:space="preserve">
+    <value>Mixdown:</value>
+  </data>
+  <data name="SampleRateLabel" xml:space="preserve">
+    <value>Sample Rate:</value>
+  </data>
+  <data name="BitrateLabel" xml:space="preserve">
+    <value>Bitrate:</value>
+  </data>
+  <data name="CompressionLabel" xml:space="preserve">
+    <value>Compression:</value>
+  </data>
+  <data name="GainLabel" xml:space="preserve">
+    <value>Gain (dB):</value>
+  </data>
+  <data name="DrcLabel" xml:space="preserve">
+    <value>DRC:</value>
+  </data>
+  <data name="NameLabel" xml:space="preserve">
+    <value>Name:</value>
+  </data>
+  <data name="AscendingQualityToolTip" xml:space="preserve">
+    <value>High values mean high quality.</value>
+  </data>
+  <data name="DescendingQualityToolTip" xml:space="preserve">
+    <value>Low values mean high quality.</value>
+  </data>
+  <data name="AudioQualityToolTip" xml:space="preserve">
+    <value>The audio quality target. {0} Valid values are from {1} to {2}.</value>
+  </data>
+  <data name="AscendingCompressionToolTip" xml:space="preserve">
+    <value>High values mean high compression: better quality/smaller size but longer encode times.</value>
+  </data>
+  <data name="DescendingCompressionToolTip" xml:space="preserve">
+    <value>Low values mean high compression: better quality/smaller size but longer encode times.</value>
+  </data>
+  <data name="AudioCompressionToolTip" xml:space="preserve">
+    <value>The amount of compression to apply. {0} Valid values are from {1} to {2}.</value>
+  </data>
+  <data name="AudioEncoder_copy" xml:space="preserve">
+    <value />
+  </data>
+  <data name="AudioEncoder_copy_aac" xml:space="preserve">
+    <value />
+  </data>
+  <data name="AudioEncoder_copy_ac3" xml:space="preserve">
+    <value />
+  </data>
+  <data name="AudioEncoder_copy_dts" xml:space="preserve">
+    <value />
+  </data>
+  <data name="AudioEncoder_copy_dtshd" xml:space="preserve">
+    <value />
+  </data>
+  <data name="AudioEncoder_copy_mp3" xml:space="preserve">
+    <value />
+  </data>
+  <data name="AudioEncoder_faac" xml:space="preserve">
+    <value />
+    <comment>Leaving this blank will mean we rely on the friendly name from HandBrake. The short name is used for the key (: gets replaced by _)</comment>
+  </data>
+  <data name="AudioEncoder_ffaac" xml:space="preserve">
+    <value />
+  </data>
+  <data name="AudioEncoder_ffac3" xml:space="preserve">
+    <value />
+  </data>
+  <data name="AudioEncoder_ffflac" xml:space="preserve">
+    <value />
+  </data>
+  <data name="AudioEncoder_lame" xml:space="preserve">
+    <value />
+  </data>
+  <data name="AudioEncoder_vorbis" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Mixdown_5point1" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Mixdown_5_2_lfe" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Mixdown_dpl1" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Mixdown_dpl2" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Mixdown_left_only" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Mixdown_mono" xml:space="preserve">
+    <value />
+    <comment>Leaving this blank will mean we rely on the friendly name from HandBrake. The short name is used for the key.</comment>
+  </data>
+  <data name="Mixdown_right_only" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Mixdown_stereo" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Bitrate" xml:space="preserve">
+    <value>Bitrate</value>
+  </data>
+  <data name="Encoding" xml:space="preserve">
+    <value>Encoding</value>
+  </data>
+  <data name="ReferenceFramesLabel" xml:space="preserve">
+    <value>Reference Frames:</value>
+  </data>
+  <data name="MaxBFramesLabel" xml:space="preserve">
+    <value>Maximum B-Frames:</value>
+  </data>
+  <data name="CabacLabel" xml:space="preserve">
+    <value>CABAC:</value>
+  </data>
+  <data name="EightByEightTransformLabel" xml:space="preserve">
+    <value>8x8 Transform:</value>
+  </data>
+  <data name="WeightedPFramesLabel" xml:space="preserve">
+    <value>Weighted P-Frames:</value>
+  </data>
+  <data name="PyramidalBFramesLabel" xml:space="preserve">
+    <value>Pyramidal B-Frames:</value>
+  </data>
+  <data name="NoDctDecimateLabel" xml:space="preserve">
+    <value>No DCT-Decimate:</value>
+  </data>
+  <data name="Analysis" xml:space="preserve">
+    <value>Analysis</value>
+  </data>
+  <data name="AdaptiveBFramesLabel" xml:space="preserve">
+    <value>Adaptive B-Frames:</value>
+  </data>
+  <data name="AdaptiveDirectModeLabel" xml:space="preserve">
+    <value>Adaptive Direct Mode:</value>
+  </data>
+  <data name="MotionEstimationMethodLabel" xml:space="preserve">
+    <value>Motion Estimation Method:</value>
+  </data>
+  <data name="SubpixelMotionEstimationLabel" xml:space="preserve">
+    <value>Subpixel Motion Estimation:</value>
+  </data>
+  <data name="MotionEstimationRangeLabel" xml:space="preserve">
+    <value>Motion Estimation Range:</value>
+  </data>
+  <data name="AdaptiveQuantizationStrengthLabel" xml:space="preserve">
+    <value>Adaptive Quantization Strength:</value>
+  </data>
+  <data name="PsychoVisualRateDistortionLabel" xml:space="preserve">
+    <value>Psychovisual Rate Distortion:</value>
+  </data>
+  <data name="PsychovisualTrellisLabel" xml:space="preserve">
+    <value>Psychovisual Trellis:</value>
+  </data>
+  <data name="DeblockingLabel" xml:space="preserve">
+    <value>Deblocking:</value>
+  </data>
+  <data name="PartitionTypeLabel" xml:space="preserve">
+    <value>Partition Type:</value>
+  </data>
+  <data name="TrellisLabel" xml:space="preserve">
+    <value>Trellis:</value>
+  </data>
+  <data name="OptionsString" xml:space="preserve">
+    <value>Options String</value>
+  </data>
+  <data name="PyramidalBFrames_Off" xml:space="preserve">
+    <value>Off</value>
+  </data>
+  <data name="PyramidalBFrames_Normal" xml:space="preserve">
+    <value>Normal</value>
+  </data>
+  <data name="PyramidalBFrames_Strict" xml:space="preserve">
+    <value>Strict</value>
+  </data>
+  <data name="AdaptiveBFrames_Off" xml:space="preserve">
+    <value>Off</value>
+  </data>
+  <data name="AdaptiveBFrames_Fast" xml:space="preserve">
+    <value>Fast</value>
+  </data>
+  <data name="AdaptiveBFrames_Optimal" xml:space="preserve">
+    <value>Optimal</value>
+  </data>
+  <data name="DirectPrediction_None" xml:space="preserve">
+    <value>None</value>
+  </data>
+  <data name="DirectPrediction_Spatial" xml:space="preserve">
+    <value>Spatial</value>
+  </data>
+  <data name="DirectPrediction_Temporal" xml:space="preserve">
+    <value>Temporal</value>
+  </data>
+  <data name="DirectPrediction_Automatic" xml:space="preserve">
+    <value>Automatic</value>
+  </data>
+  <data name="MotionEstimationMethod_Diamond" xml:space="preserve">
+    <value>Diamond</value>
+  </data>
+  <data name="MotionEstimationMethod_Hexagon" xml:space="preserve">
+    <value>Hexagon</value>
+  </data>
+  <data name="MotionEstimationMethod_UnevenMultiHexagon" xml:space="preserve">
+    <value>Uneven Multi-Hexagon</value>
+  </data>
+  <data name="MotionEstimationMethod_Exhaustive" xml:space="preserve">
+    <value>Exhaustive</value>
+  </data>
+  <data name="MotionEstimationMethod_TransformedExhaustive" xml:space="preserve">
+    <value>Transformed Exhaustive</value>
+  </data>
+  <data name="SubpixelMotionEstimation_0" xml:space="preserve">
+    <value>0: SAD, no subpel (super fast!)</value>
+  </data>
+  <data name="SubpixelMotionEstimation_1" xml:space="preserve">
+    <value>1: SAD, qpel</value>
+  </data>
+  <data name="SubpixelMotionEstimation_2" xml:space="preserve">
+    <value>2: SATD, qpel</value>
+  </data>
+  <data name="SubpixelMotionEstimation_3" xml:space="preserve">
+    <value>3: SATD, multi-qpel</value>
+  </data>
+  <data name="SubpixelMotionEstimation_4" xml:space="preserve">
+    <value>4: SATD, qpel on all</value>
+  </data>
+  <data name="SubpixelMotionEstimation_5" xml:space="preserve">
+    <value>5: SATD, multi-qpel on all</value>
+  </data>
+  <data name="SubpixelMotionEstimation_6" xml:space="preserve">
+    <value>6: RD in I/P-frames</value>
+  </data>
+  <data name="SubpixelMotionEstimation_7" xml:space="preserve">
+    <value>7: RD in all frames</value>
+  </data>
+  <data name="SubpixelMotionEstimation_8" xml:space="preserve">
+    <value>8: RD refine in I/P-frames</value>
+  </data>
+  <data name="SubpixelMotionEstimation_9" xml:space="preserve">
+    <value>9: RD refine in all frames</value>
+  </data>
+  <data name="SubpixelMotionEstimation_10" xml:space="preserve">
+    <value>10: QPRD in all frames</value>
+  </data>
+  <data name="SubpixelMotionEstimation_11" xml:space="preserve">
+    <value>11: No early terminations in analysis</value>
+  </data>
+  <data name="Analysis_None" xml:space="preserve">
+    <value>None</value>
+  </data>
+  <data name="Analysis_Some" xml:space="preserve">
+    <value>Some</value>
+  </data>
+  <data name="Analysis_All" xml:space="preserve">
+    <value>All</value>
+  </data>
+  <data name="Trellis_Off" xml:space="preserve">
+    <value>Off</value>
+  </data>
+  <data name="Trellis_EncodeOnly" xml:space="preserve">
+    <value>Encode Only</value>
+  </data>
+  <data name="Trellis_Always" xml:space="preserve">
+    <value>Always</value>
+  </data>
+  <data name="DefaultFormat" xml:space="preserve">
+    <value>{0} (Default)</value>
+  </data>
+  <data name="EncodingWindowTitle" xml:space="preserve">
+    <value>Preset: {0}</value>
   </data>
 </root>
