Update subtitles UI logic to only allow one PGS subtitle at a time when the MP4 container is used.
--HG--
branch : beta

--- a/VidCoder/LocalResources/SubtitleRes.resx
+++ b/VidCoder/LocalResources/SubtitleRes.resx
@@ -146,4 +146,10 @@
   <data name="ForeignAudioSearch">
     <value xml:space="preserve">Foreign Audio Search</value>
   </data>
+  <data name="AddSourceNoSubtitlesToolTip">
+    <value xml:space="preserve">No subtitles on the source video.</value>
+  </data>
+  <data name="SrtFilePickerText">
+    <value xml:space="preserve">Add subtitles file</value>
+  </data>
 </root>
