Fixed crash on opening VidCoder after de-selecting "remember locations". Fixed problem with some H.264 levels getting incorrectly grayed out.
--HG--
branch : beta

--- a/VidCoder/Properties/Resources.resx
+++ b/VidCoder/Properties/Resources.resx
@@ -220,4 +220,7 @@ A full copy of the GNU General Public License has been included along with this 
   <data name="CouldNotAccessDirectoriesError">
     <value xml:space="preserve">Could not access the following directories:</value>
   </data>
+  <data name="None">
+    <value xml:space="preserve">None</value>
+  </data>
 </root>
